--- a/index.html
+++ b/index.html
@@ -163,5 +163,34 @@
             </div>
         </div>
     </section>
+
+    <section id="download">
+        <div class="container py-xl">
+            <div class="card px-lg even-columns items-center">
+                <div>
+                    <header>
+                        <strong>Download</strong>
+                        <h2>Bora cantar?</h2>
+                    </header>
+                    <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o zingen agora e transforme sua perfomances em experiências inesquecíveis</p>
+
+                    <div class="button flex gap-1">
+                        <a href="#">
+                            <img src="assets/button-appstore.svg" alt="Baixar da Apple Store">
+                        </a>
+                        <a href="#">
+                            <img src="assets/button-playstore.svg" alt="Baixar da Play Store">
+                        </a>
+
+                        <a href="#">
+                            
+                        </a>
+
+                    </div>
+                </div>
+                <img src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
